# criss1

./: .gitignore  CLAUDE.md
Instructions/: create1-architecture
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/tests/: git-test
frontend/: index.html  landing.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/features/landing/: Landing.css  Landing.js  data.js  utils.js
frontend/src/features/landing/components/: CtaBanner.js  Faq.js  Features.js  Footer.js  Hero.js  HowItWorks.js  LogoMarquee.js  Navbar.js  Pricing.js  Testimonials.js
