[project]
name = "criss1-backend"
version = "0.1.0"
description = "Backend API for criss1"
authors = [
    {name = "Joegcv"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
